# kamoso

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  0001-qml6glitem-qtitem-Allow-configuring-if-the-item-will.patch  AUTHORS  CMakeLists.txt  Messages.sh  README  TODO  config-kopete.h.cmake  kamoso.appdata.xml  kamoso.kdev4  org.kde.kamoso.appdata.xml  rc.cpp  snapcraft.yaml
.kdev4/: kamoso.kdev4
cmake/: FindGStreamer.cmake  FindLIBVLC.cmake  FindLibGCal.cmake
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  hisc-apps-kamoso.svgz  sc-actions-burst.svgz  sc-actions-record.svgz  sc-actions-shoot.svgz
po/: CMakeLists.txt  addlang.sh  (+3 more)
src/: CMakeLists.txt  burstshootmode.cpp  burstshootmode.h  countdownwidget.cpp  countdownwidget.h  customDelegate.cpp  customDelegate.h  device.cpp  device.h  devicemanager.cpp  devicemanager.h  generalConfig.ui  infoshared.cpp  infoshared.h  kamoso.cpp  kamoso.desktop  kamoso.h  kamoso.notifyrc  kamosoSettings.kcfg  kamosoSettings.kcfgc  kamoso_flow.patch  kamosodirmodel.cpp  kamosodirmodel.h  kamosoimagecollectionshared.cpp  kamosoimagecollectionshared.h  kamosojob.cpp  kamosojob.h  kamosojobtracker.cpp  kamosojobtracker.h  kamosoplugin.cpp  kamosoplugin.desktop  kamosoplugin.h  kamosoquick.cpp  kamosoquick.h  kamososettings.cpp  kamososettings.h  kipiaction.cpp  kipiaction.h  kipiinterface.cpp  kipiinterface.h  (+33 more)
src/QGst/Quick/: global.h  videoitem.cpp  videoitem.h  videosurface.cpp  videosurface.h  videosurface_p.h
src/avdevice/: CMakeLists.txt  dummyvideodevice.cpp  dummyvideodevice.h  kopete_export.h  videodevice.cpp  videodevice.h  videodevicemodelpool.cpp  videodevicemodelpool.h  videodevicepool.cpp  videodevicepool.h  videodevicevector.cpp  videodevicevector.h  videoinput.cpp  videoinput.h
src/elements/: CMakeLists.txt
src/elements/gstqtvideosink/: CMakeLists.txt  autotest.cpp  gstqtglvideosink.cpp  gstqtglvideosinkbase.cpp  gstqtglvideosinkbase.h  gstqtquick2videosink.cpp  gstqtquick2videosink.h  gstqtvideosinkbase.cpp  gstqtvideosinkbase.h  gstqtvideosinkplugin.cpp  gstqtvideosinkplugin.h
src/elements/gstqtvideosink/delegates/: basedelegate.cpp  basedelegate.h  qtquick2videosinkdelegate.cpp  qtquick2videosinkdelegate.h  qtvideosinkdelegate.cpp  qtvideosinkdelegate.h
src/elements/gstqtvideosink/painters/: abstractsurfacepainter.h  genericsurfacepainter.cpp  genericsurfacepainter.h  openglsurfacepainter.cpp  openglsurfacepainter.h  videomaterial.cpp  videomaterial.h  videonode.cpp  videonode.h
src/elements/gstqtvideosink/utils/: bufferformat.cpp  bufferformat.h  utils.cpp  utils.h
src/pluginTester/: CMakeLists.txt  fakeimagecollectionshared.cpp  fakeinfoshared.cpp  fakeinfoshared.h  fakekipiaction.cpp  fakekipiaction.h  fakekipiinterface.cpp  main.cpp  pluginTester.cpp  pluginTester.h
src/plugins/: CMakeLists.txt  exportinterface.h
src/plugins/execute/: CMakeLists.txt  execute.cpp  execute.desktop  execute.h
src/plugins/facebook/: CMakeLists.txt  facebook.cpp  facebook.h  facebooksender.desktop  facebooktest.cpp  facebooktest.h  fbalbum.cpp  fbalbum.h  fbitem.h  fbtalker.cpp  fbtalker.h  mpform.cpp  mpform.h
src/plugins/facebook/icons/: CMakeLists.txt
src/plugins/trash/: CMakeLists.txt  trash.cpp  trash.desktop  trash.h
src/plugins/youtube/: CMakeLists.txt  auth.ui  kipiplugin_youtube.cpp  kipiplugin_youtube.desktop  kipiplugin_youtube.h  videoInfo.ui  youtube.cpp  youtube.desktop  youtube.h  youtubejob.cpp  youtubejob.h  youtubejobcomposite.cpp  youtubejobcomposite.h  youtubemanager.cpp  youtubemanager.h
src/plugins/youtube/icons/: CMakeLists.txt
src/qml/: ActionsModel.qml  Config.qml  DirectoryView.qml  ImageThumbnail.qml  ImagesView.qml  Main.qml  Mode.qml  OverlayFrame.qml  White.qml
src/share/: CMakeLists.txt  alternativesmodel.cpp  alternativesmodel.h  job.cpp  job.h  pluginbase.cpp  pluginbase.h  sharealternativesmodel.cpp  sharealternativesmodel.h  shareinterface.cpp  shareinterface.h
src/share/autotests/: CMakeLists.txt  alternativesmodeltest.cpp  alternativesmodeltest.h
src/share/plugins/: CMakeLists.txt  ExportPluginType.desktop  dummyplugin.cpp  dummyplugin.desktop  dummyplugin_config.qml
src/share/plugins/dummy/: CMakeLists.txt  dummyplugin.cpp  dummyplugin.desktop
src/share/plugins/imgur/: CMakeLists.txt  imgurplugin.cpp  imgurplugin.desktop  mpform.cpp  mpform.h
src/share/plugins/youtube/: CMakeLists.txt  kipiplugin_youtube.cpp  kipiplugin_youtube.h  videoInfo.ui  youtubejob.cpp  youtubejob.h  youtubejobcomposite.cpp  youtubejobcomposite.h  youtubeplugin.desktop  youtubeplugin_config.qml
src/share/tool/: CMakeLists.txt  ShareWizard.qml  main.cpp  main.qml  sharetool-resources.qrc
src/udev/: udevqt_p.h  udevqtclient.cpp  udevqtclient.h  udevqtdevice.cpp  udevqtdevice.h
src/video/: gstpointer.h  webcamcontrol.cpp  webcamcontrol.h
widgetsrc/: .kdev_include_paths  CMakeLists.txt  burstshootmode.cpp  burstshootmode.h  config-nepomuk.h.cmake  countdownwidget.h  customDelegate.cpp  customDelegate.h  devicemanager.h  infoshared.cpp  infoshared.h  kamoso.cpp  kamoso.desktop  kamoso.h  kamosoimagecollectionshared.cpp  kamosoimagecollectionshared.h  kamosojobtracker.cpp  kamosojobtracker.h  kamosoplugin.cpp  kamosoplugin.desktop  kamosoplugin.h  kipiaction.cpp  kipiaction.h  kipiinterface.cpp  kipiinterface.h  main.cpp  mainWidget.ui  org.kde.Solid.PowerManagement.xml  pagewebcamconfigmanager.cpp  pagewebcamconfigmanager.h  photoshootmode.cpp  photoshootmode.h  pictureConfig.ui  shootmode.cpp  shootmode.h  thumbnailview.cpp  thumbnailview.h  videoConfig.ui  videoshootmode.h  webcamdialog.cpp  (+6 more)
widgetsrc/pluginTester/: CMakeLists.txt  fakeimagecollectionshared.cpp  fakeimagecollectionshared.h  fakeinfoshared.cpp  fakeinfoshared.h  fakekipiaction.cpp  fakekipiaction.h  fakekipiinterface.cpp  fakekipiinterface.h  pluginTester.cpp  pluginTester.h
widgetsrc/plugins/: CMakeLists.txt
widgetsrc/plugins/youtube/: CMakeLists.txt  kipiplugin_youtube.cpp  kipiplugin_youtube.desktop  kipiplugin_youtube.h  youtubejob.cpp  youtubejob.h  youtubejobcomposite.h  youtubemanager.cpp
(+74 files in other folders)
